--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "prettus/l5-repository": "^2.6",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
