--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "prettus/l5-repository": "^2.6",
+        "spatie/laravel-permission": "^3.11",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
