--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         "laravel/tinker": "^2.0",
         "prettus/l5-repository": "^2.6",
         "spatie/laravel-permission": "^3.11",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "fzaninotto/faker": "^1.9.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
