--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^1.0",
+        "fzaninotto/faker": "^1.9.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "prettus/l5-repository": "^2.6",
         "spatie/laravel-permission": "^3.11",
-        "tymon/jwt-auth": "^1.0",
-        "fzaninotto/faker": "^1.9.1"
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
