--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fzaninotto/faker": "^1.9.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "owen-it/laravel-auditing": "^10.0",
         "prettus/l5-repository": "^2.6",
         "spatie/laravel-permission": "^3.11",
         "tymon/jwt-auth": "^1.0"
